<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_default"
    tools:context=".ConfiguracionActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txvConfiguraciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar_publicacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/text_size"
        android:textAlignment="center"
        style="?attr/textAppearanceHeadline5"
        android:layout_marginTop="40dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idNick"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txvConfiguraciones"
        android:layout_marginTop="40dp"
        android:hint="@string/nick_jugador"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <RadioGroup
        android:id="@+id/rgConfiguracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/idNick"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbtFacil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_default"
            android:text="@string/facilEntity"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbtMedio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_default"
            android:text="@string/Medio"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbtDificil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_default"
            android:text="@string/Dificil"/>
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/rgConfiguracion"
        app:layout_constraintEnd_toEndOf="@id/rgConfiguracion"
        app:layout_constraintTop_toBottomOf="@id/rgConfiguracion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.7"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_default"
        android:text="@string/guardar"/>

</androidx.constraintlayout.widget.ConstraintLayout>